--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,10 +6,14 @@ repos:
         args: [--dialect, duckdb, --config, .sqlfluff]
         additional_dependencies:
           - sqlfluff-templater-dbt==3.0.7
+          - dbt-duckdb>=1.8.0
+
       - id: sqlfluff-fix
         args: [--dialect, duckdb, --config, .sqlfluff]
         additional_dependencies:
           - sqlfluff-templater-dbt==3.0.7
+          - dbt-duckdb>=1.8.0
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
